@@ -56,7 +56,7 @@ public class AmphithereAITargetItems<T extends ItemEntity> extends TrackTargetGo
         if (this.list.isEmpty()) return false;
 
         this.list.sort(this.theNearestAttackableTargetSorter);
-        this.targetEntity = this.list.get(0);
+        this.targetEntity = this.list.getFirst();
         return true;
     }
 
