@@ -54,7 +54,7 @@ public class HippogryphAITargetItems<T extends ItemEntity> extends TrackTargetGo
         if (this.list.isEmpty()) return false;
         else {
             this.list.sort(this.theNearestAttackableTargetSorter);
-            this.targetEntity = this.list.get(0);
+            this.targetEntity = this.list.getFirst();
             return true;
         }
     }
